[gd_scene load_steps=5 format=3 uid="uid://xe278cxgf8oe"]

[ext_resource type="Texture2D" uid="uid://dbahffcm0iykk" path="res://Spreites/Personages/BonecoTemplate_5.png" id="1_16uax"]
[ext_resource type="Script" path="res://Scrips/troca_de_irmao.gd" id="1_ae4lh"]
[ext_resource type="Texture2D" uid="uid://bjoi4h0esybyc" path="res://Spreites/Personages/BonecoTemplate_13.png" id="2_gbdmm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4csaw"]
radius = 38.833

[node name="trocaDeIrmao" type="Node2D"]
script = ExtResource("1_ae4lh")

[node name="BonecoTemplate5" type="Sprite2D" parent="."]
z_index = 2
y_sort_enabled = true
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_16uax")
hframes = 3

[node name="BonecoTemplate13" type="Sprite2D" parent="."]
visible = false
z_index = 2
y_sort_enabled = true
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_gbdmm")
hframes = 3

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4csaw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
